Policies/deny-force-delete/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: deny-force-delete
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../deny-force-delete.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: deny-force-delete
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: goodpod.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: badpod.yaml
